--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:description" content="Filmmaker & Artist">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://chrisweil.com">
-    <meta property="og:image" content="https://chrisweil.com/images/chris-weil.jpg">
+    <meta property="og:image" content="https://weilchris.github.io/images/chris-weil.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <!-- Twitter Card Meta Tags (Twitter) -->
@@ -25,7 +25,7 @@
     <meta name="twitter:title" content="Chris Weil">
     <meta name="twitter:description" content="Filmmaker & Artist">
     <meta name="twitter:url" content="https://chrisweil.com">
-    <meta name="twitter:image" content="https://chrisweil.com/images/chris-weil.jpg">
+    <meta name="twitter:image" content="https://weilchris.github.io/images/chris-weil.jpg">
     <!-- Stylesheets, scripts, and other resources go here -->
     <link rel="stylesheet" type="text/css" href="./css/uikit.css" />
     <link rel="stylesheet" type="text/css" href="./css/custom.css" />
@@ -149,10 +149,10 @@
     "name": "Artoldo Pictures"
   },
   "sameAs": [
-    "https://www.artoldo.com",
-    "https://www.imdb.com/search/title/?companies=co0630949"
+    "https://www.artoldopictures.com",
+    "https://www.imdb.com/name/nm1234567" 
   ],
-  "filmography": [
+  "creatorOf": [
     {
       "@type": "TVSeries",
       "name": "C. G. Jung on Alchemy",
@@ -514,208 +514,68 @@
       ]
     },
     {
-      "@type": "Movie",
-      "name": "MicroGnosing",
-      "datePublished": "2019",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Super Vario Birds",
-      "datePublished": "2019",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "WhimSeaCall - Nocturnal Sea",
-      "datePublished": "2019",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "CarOuzel",
-      "datePublished": "2018",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Super Sauber",
-      "datePublished": "2018",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Paleo Impulse",
-      "datePublished": "2018",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Ugo Dossi - Art and Space",
-      "datePublished": "2017",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "The Ritman Library: Amsterdam",
-      "datePublished": "2017",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    }
-  ],
-  "artwork": [
-    {
-      "@type": "VisualArtwork",
+      "@type": "CreativeWork",
       "name": "Achtung Banditen",
-      "dateCreated": "2020",
-      "creator": {
-        "@type": "Organization",
-        "name": "Artoldo",
-        "members": [
-          {
-            "@type": "Person",
-            "name": "Chris Weil"
-          },
-          {
-            "@type": "Person",
-            "name": "Sara Ferro"
-          }
-        ]
-      }
+      "creator": [
+        {
+          "@type": "Person",
+          "name": "Chris Weil"
+        },
+        {
+          "@type": "Person",
+          "name": "Sara Ferro"
+        }
+      ],
+      "workExample": "Interactive Art Installation"
     },
     {
-      "@type": "VisualArtwork",
+      "@type": "CreativeWork",
       "name": "kaltcaldo",
-      "dateCreated": "2023",
-      "creator": {
-        "@type": "Organization",
-        "name": "Artoldo",
-        "members": [
-          {
-            "@type": "Person",
-            "name": "Chris Weil"
-          },
-          {
-            "@type": "Person",
-            "name": "Sara Ferro"
-          }
-        ]
-      }
+      "creator": [
+        {
+          "@type": "Person",
+          "name": "Chris Weil"
+        },
+        {
+          "@type": "Person",
+          "name": "Sara Ferro"
+        }
+      ],
+      "workExample": "Interactive Art Installation"
     },
     {
-      "@type": "VisualArtwork",
+      "@type": "CreativeWork",
       "name": "The Virtual Journey of the Mask",
-      "dateCreated": "2024",
-      "creator": {
-        "@type": "Organization",
-        "name": "Artoldo",
-        "members": [
-          {
-            "@type": "Person",
-            "name": "Chris Weil"
-          },
-          {
-            "@type": "Person",
-            "name": "Sara Ferro"
-          }
-        ]
-      }
+      "creator": [
+        {
+          "@type": "Person",
+          "name": "Chris Weil"
+        },
+        {
+          "@type": "Person",
+          "name": "Sara Ferro"
+        }
+      ],
+      "workExample": "Interactive Art Installation"
     },
     {
-      "@type": "VisualArtwork",
+      "@type": "CreativeWork",
       "name": "Zoroaster Superstar",
-      "dateCreated": "2023",
-      "creator": {
-        "@type": "Organization",
-        "name": "Artoldo",
-        "members": [
-          {
-            "@type": "Person",
-            "name": "Chris Weil"
-          },
-          {
-            "@type": "Person",
-            "name": "Sara Ferro"
-          }
-        ]
-      }
+      "creator": [
+        {
+          "@type": "Person",
+          "name": "Chris Weil"
+        },
+        {
+          "@type": "Person",
+          "name": "Sara Ferro"
+        }
+      ],
+      "workExample": "Interactive Art Installation"
     }
   ]
 }
 </script>
-
-<!-- Schema org Person End -->
 
 <!-- Lightbox -->
 
@@ -743,7 +603,7 @@
 
       <header class="uk-text-center uk-padding">
         <h1 class="uk-heading-xlarge uk-text-thin uk-animation-slide-top" style="color: white; text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);">Chris Weil</h1>
-        <h2 class="uk-heading-medium uk-text-thin uk-animation-slide-bottom" style="color: white; text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);">Filmmaker & Artist</h2>
+        <h2 class="uk-heading-medium uk-text-thin uk-animation-slide-bottom uk-visible@m" style="color: white; text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);">Filmmaker & Artist</h2>
       </header>
 
       <!-- Header Section End -->
