--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
     "https://www.artoldo.com",
     "https://www.imdb.com/search/title/?companies=co0630949" 
   ],
-  "creatorOf": [
+  "movie": [
     {
-      "@type": "TVSeries",
+      "@type": "Movie",
       "name": "C. G. Jung on Alchemy",
       "datePublished": "2023",
       "director": [
@@ -514,6 +514,128 @@
       ]
     },
     {
+      "@type": "Movie",
+      "name": "MicroGnosing",
+      "datePublished": "2019",
+      "director": [
+        {
+          "@type": "Person",
+          "name": "Chris Weil"
+        },
+        {
+          "@type": "Person",
+          "name": "Sara Ferro"
+        }
+      ]
+    },
+    {
+      "@type": "Movie",
+      "name": "Super Vario Birds",
+      "datePublished": "2019",
+      "director": [
+        {
+          "@type": "Person",
+          "name": "Chris Weil"
+        },
+        {
+          "@type": "Person",
+          "name": "Sara Ferro"
+        }
+      ]
+    },
+    {
+      "@type": "Movie",
+      "name": "WhimSeaCall - Nocturnal Sea",
+      "datePublished": "2019",
+      "director": [
+        {
+          "@type": "Person",
+          "name": "Chris Weil"
+        },
+        {
+          "@type": "Person",
+          "name": "Sara Ferro"
+        }
+      ]
+    },
+    {
+      "@type": "Movie",
+      "name": "CarOuzel",
+      "datePublished": "2018",
+      "director": [
+        {
+          "@type": "Person",
+          "name": "Chris Weil"
+        },
+        {
+          "@type": "Person",
+          "name": "Sara Ferro"
+        }
+      ]
+    },
+    {
+      "@type": "Movie",
+      "name": "Super Sauber",
+      "datePublished": "2018",
+      "director": [
+        {
+          "@type": "Person",
+          "name": "Chris Weil"
+        },
+        {
+          "@type": "Person",
+          "name": "Sara Ferro"
+        }
+      ]
+    },
+    {
+      "@type": "Movie",
+      "name": "Paleo Impulse",
+      "datePublished": "2018",
+      "director": [
+        {
+          "@type": "Person",
+          "name": "Chris Weil"
+        },
+        {
+          "@type": "Person",
+          "name": "Sara Ferro"
+        }
+      ]
+    },
+    {
+      "@type": "Movie",
+      "name": "Ugo Dossi - Art and Space",
+      "datePublished": "2017",
+      "director": [
+        {
+          "@type": "Person",
+          "name": "Chris Weil"
+        },
+        {
+          "@type": "Person",
+          "name": "Sara Ferro"
+        }
+      ]
+    },
+    {
+      "@type": "Movie",
+      "name": "The Ritman Library: Amsterdam",
+      "datePublished": "2017",
+      "director": [
+        {
+          "@type": "Person",
+          "name": "Chris Weil"
+        },
+        {
+          "@type": "Person",
+          "name": "Sara Ferro"
+        }
+      ]
+    }
+  ],
+  "artwork": [
+    {
       "@type": "CreativeWork",
       "name": "Achtung Banditen",
       "creator": [
@@ -525,8 +647,7 @@
           "@type": "Person",
           "name": "Sara Ferro"
         }
-      ],
-      "workExample": "Interactive Art Installation"
+      ]
     },
     {
       "@type": "CreativeWork",
@@ -540,8 +661,7 @@
           "@type": "Person",
           "name": "Sara Ferro"
         }
-      ],
-      "workExample": "Interactive Art Installation"
+      ]
     },
     {
       "@type": "CreativeWork",
@@ -555,8 +675,7 @@
           "@type": "Person",
           "name": "Sara Ferro"
         }
-      ],
-      "workExample": "Interactive Art Installation"
+      ]
     },
     {
       "@type": "CreativeWork",
@@ -570,12 +689,14 @@
           "@type": "Person",
           "name": "Sara Ferro"
         }
-      ],
-      "workExample": "Interactive Art Installation"
+      ]
     }
   ]
 }
 </script>
+
+<!-- Schema org Person -->
+
 <!-- Lightbox -->
 
 <script>   
@@ -585,6 +706,8 @@
         }
     }, 'lightbox');
 </script>
+
+<!-- Lightbox End -->
 
   </head>
   <body>
