--- a/index.html
+++ b/index.html
@@ -150,552 +150,210 @@
   },
   "sameAs": [
     "https://www.artoldo.com",
-    "https://www.imdb.com/search/title/?companies=co0630949" 
-  ],
-  "movie": [
-    {
-      "@type": "Movie",
-      "name": "C. G. Jung on Alchemy",
-      "datePublished": "2023",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Black Sudo Rising",
-      "datePublished": "2022",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Prampolini-Menarini Express",
-      "datePublished": "2022",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "The Luther Blissett Legacy",
-      "datePublished": "2022",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Dio No No War",
-      "datePublished": "2022",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Plant X",
-      "datePublished": "2021",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "VE®NICE69",
-      "datePublished": "2021",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Play Rec: For Film",
-      "datePublished": "2021",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Night Terror",
-      "datePublished": "2021",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Hauntology of the Retrodromomania",
-      "datePublished": "2021",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "PegaSOMOSh",
-      "datePublished": "2021",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Frammenti di una Festa Furiosa",
-      "datePublished": "2021",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Taxidrome",
-      "datePublished": "2021",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Glitching Offshore",
-      "datePublished": "2021",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Mascara Cartridge Déjà War",
-      "datePublished": "2020",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Butterfly 360°",
-      "datePublished": "2020",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Synecdoche Turin",
-      "datePublished": "2020",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "H(o)me(o)pa®t(h)y",
-      "datePublished": "2020",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Queen of the Luna Parking",
-      "datePublished": "2020",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "AT MOre SPHERES",
-      "datePublished": "2020",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Temporally",
-      "datePublished": "2020",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Speed",
-      "datePublished": "2020",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Vespertilio Spillover",
-      "datePublished": "2020",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Timor Panicus",
-      "datePublished": "2020",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "MicroGnosing",
-      "datePublished": "2019",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Super Vario Birds",
-      "datePublished": "2019",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "WhimSeaCall - Nocturnal Sea",
-      "datePublished": "2019",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "CarOuzel",
-      "datePublished": "2018",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Super Sauber",
-      "datePublished": "2018",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Paleo Impulse",
-      "datePublished": "2018",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "Ugo Dossi - Art and Space",
-      "datePublished": "2017",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "Movie",
-      "name": "The Ritman Library: Amsterdam",
-      "datePublished": "2017",
-      "director": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    }
-  ],
-  "artwork": [
-    {
-      "@type": "CreativeWork",
-      "name": "Achtung Banditen",
-      "creator": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "CreativeWork",
-      "name": "kaltcaldo",
-      "creator": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "CreativeWork",
-      "name": "Artifashion Intelligence: The Virtual Journey of the Mask",
-      "creator": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    },
-    {
-      "@type": "CreativeWork",
-      "name": "Zoroaster Superstar",
-      "creator": [
-        {
-          "@type": "Person",
-          "name": "Chris Weil"
-        },
-        {
-          "@type": "Person",
-          "name": "Sara Ferro"
-        }
-      ]
-    }
+    "https://www.imdb.com/search/title/?companies=co0630949"
   ]
 }
 </script>
 
-<!-- Schema org Person -->
+<!-- Schema org Person End -->
+
+<!-- Schema org Filmography -->
+
+<script type="application/ld+json">
+
+{
+  "@context": "https://schema.org",
+  "@type": "TVSeries",
+  "name": "C. G. Jung on Alchemy",
+  "datePublished": "2023",
+  "director": [
+    {
+      "@type": "Person",
+      "name": "Chris Weil"
+    },
+    {
+      "@type": "Person",
+      "name": "Sara Ferro"
+    }
+  ]
+}
+
+
+{
+  "@context": "https://schema.org",
+  "@type": "Movie",
+  "director": [
+    {
+      "@type": "Person",
+      "name": "Chris Weil"
+    },
+    {
+      "@type": "Person",
+      "name": "Sara Ferro"
+    }
+  ],
+  "film": [
+    {
+      "@type": "Movie",
+      "name": "Black Sudo Rising",
+      "datePublished": "2022"
+    },
+    {
+      "@type": "Movie",
+      "name": "Prampolini-Menarini Express",
+      "datePublished": "2022"
+    },
+    {
+      "@type": "Movie",
+      "name": "The Luther Blissett Legacy",
+      "datePublished": "2022"
+    },
+    {
+      "@type": "Movie",
+      "name": "Dio No No War",
+      "datePublished": "2022"
+    },
+    {
+      "@type": "Movie",
+      "name": "Plant X",
+      "datePublished": "2021"
+    },
+    {
+      "@type": "Movie",
+      "name": "VE®NICE69",
+      "datePublished": "2021"
+    },
+    {
+      "@type": "Movie",
+      "name": "Play Rec: For Film",
+      "datePublished": "2021"
+    },
+    {
+      "@type": "Movie",
+      "name": "Night Terror",
+      "datePublished": "2021"
+    },
+    {
+      "@type": "Movie",
+      "name": "Hauntology of the Retrodromomania",
+      "datePublished": "2021"
+    },
+    {
+      "@type": "Movie",
+      "name": "PegaSOMOSh",
+      "datePublished": "2021"
+    },
+    {
+      "@type": "Movie",
+      "name": "Frammenti di una Festa Furiosa",
+      "datePublished": "2021"
+    },
+    {
+      "@type": "Movie",
+      "name": "Taxidrome",
+      "datePublished": "2021"
+    },
+    {
+      "@type": "Movie",
+      "name": "Glitching Offshore",
+      "datePublished": "2021"
+    },
+    {
+      "@type": "Movie",
+      "name": "Mascara Cartridge Déjà War",
+      "datePublished": "2020"
+    },
+    {
+      "@type": "Movie",
+      "name": "Butterfly 360°",
+      "datePublished": "2020"
+    },
+    {
+      "@type": "Movie",
+      "name": "Synecdoche Turin",
+      "datePublished": "2020"
+    },
+    {
+      "@type": "Movie",
+      "name": "H(o)me(o)pa®t(h)y",
+      "datePublished": "2020"
+    },
+    {
+      "@type": "Movie",
+      "name": "Queen of the Luna Parking",
+      "datePublished": "2020"
+    },
+    {
+      "@type": "Movie",
+      "name": "AT MOre SPHERES",
+      "datePublished": "2020"
+    },
+    {
+      "@type": "Movie",
+      "name": "Temporally",
+      "datePublished": "2020"
+    },
+    {
+      "@type": "Movie",
+      "name": "Speed",
+      "datePublished": "2020"
+    },
+    {
+      "@type": "Movie",
+      "name": "Vespertilio Spillover",
+      "datePublished": "2020"
+    },
+    {
+      "@type": "Movie",
+      "name": "Timor Panicus",
+      "datePublished": "2020"
+    },
+    {
+      "@type": "Movie",
+      "name": "MicroGnosing",
+      "datePublished": "2019"
+    },
+    {
+      "@type": "Movie",
+      "name": "Super Vario Birds",
+      "datePublished": "2019"
+    },
+    {
+      "@type": "Movie",
+      "name": "WhimSeaCall - Nocturnal Sea",
+      "datePublished": "2019"
+    },
+    {
+      "@type": "Movie",
+      "name": "CarOuzel",
+      "datePublished": "2018"
+    },
+    {
+      "@type": "Movie",
+      "name": "Super Sauber",
+      "datePublished": "2018"
+    },
+    {
+      "@type": "Movie",
+      "name": "Paleo Impulse",
+      "datePublished": "2018"
+    },
+    {
+      "@type": "Movie",
+      "name": "Ugo Dossi - Art and Space",
+      "datePublished": "2017"
+    },
+    {
+      "@type": "Movie",
+      "name": "The Ritman Library: Amsterdam",
+      "datePublished": "2017"
+    }
+  ]
+}
+
+</script>
+
+<!-- Schema org Filmography End -->
 
 <!-- Lightbox -->
 
