--- a/index.html
+++ b/index.html
@@ -178,7 +178,9 @@
   ]
 }
 
+</script>
 
+<script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Movie",
@@ -192,7 +194,7 @@
       "name": "Sara Ferro"
     }
   ],
-  "film": [
+  "filmWorks": [
     {
       "@type": "Movie",
       "name": "Black Sudo Rising",
@@ -350,7 +352,6 @@
     }
   ]
 }
-
 </script>
 
 <!-- Schema org Filmography End -->
