--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       "name": "Sara Ferro"
     }
   ],
-  "filmWorks": [
+  "sameAs": [
     {
       "@type": "Movie",
       "name": "Black Sudo Rising",
