--- a/index.html
+++ b/index.html
@@ -735,6 +735,26 @@
 
     <ul class="uk-slider-items uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-3@m uk-child-width-1-3@l" style="cursor:grab;">
 
+        <li>
+            <img src="./images/laurel.png" width="400" height="600" alt="">
+                <div class="uk-position-center uk-panel uk-position-z-index-negative" style="cursor:grab;">
+                	<div class="uk-width-medium uk-text-uppercase uk-text-center" style="color:black">
+                        <span class="uk-text-lighter uk-text-small">Solo Exhibition</span><br>
+                        <span class="uk-text-large uk-text-bold">Studio<br>Brera<br>Milano</span><br>
+                        <span class="uk-text-lighter uk-text-small">Milan 2025</span>
+			</div>         
+		</div>
+        </li>
+        <li>
+            <img src="./images/laurel.png" width="400" height="600" alt="">
+                <div class="uk-position-center uk-panel uk-position-z-index-negative" style="cursor:grab;">
+                	<div class="uk-width-medium uk-text-uppercase uk-text-center" style="color:black">
+                        <span class="uk-text-lighter uk-text-small">Official Selection</span><br>
+                        <span class="uk-text-large uk-text-bold">Lift-Off<br>Filmmaker<br>Session</span><br>
+                        <span class="uk-text-lighter uk-text-small">London 2025</span>
+			</div>         
+		</div>
+        </li>   
 	<li>
             <img src="./images/laurel.png" width="400" height="600" alt="">
                 <div class="uk-position-center uk-panel uk-position-z-index-negative" style="cursor:grab;">
