--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000">
     <title>Chris Weil</title>
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Chris Weil, an award-winning German filmmaker and artist based in Italy, creates feature documentaries, arthouse films, and experimental cinema, showcasing exceptional storytelling and creativity.">
+    <meta name="description" content="Chris Weil, an award-winning German filmmaker and artist based in Italy, creates feature documentaries, arthouse films, and experimental cinema, showcasing exceptional 	
+    storytelling and creativity.">
     <meta name="keywords" content="Chris Weil, filmmaker, film director, artist, exhibitions, art, film, documentary, movies">
     <meta name="author" content="Chris Weil">
     <!-- Favicon -->
@@ -28,7 +29,7 @@
     <meta name="twitter:image" content="https://weilchris.github.io/images/chris-weil.jpg">
     <!-- Stylesheets, scripts, and other resources go here -->
     <link rel="stylesheet" type="text/css" href="./css/uikit.css" />
-    <link rel="stylesheet" type="text/css" href="./css/custom.css" />
+    <link rel="stylesheet" type="text/css" href="./css/custom90.css" />
     <script src="./js/uikit.js"></script>
     <script src="./js/uikit-icons.js"></script>
     <style>
@@ -182,6 +183,41 @@
 
 <script type="application/ld+json">
 [
+
+{
+    "@context": "https://schema.org",
+    "@type": "Movie",
+    "name": "Secropolis",
+    "datePublished": "2025",
+    "director": [
+      {
+        "@type": "Person",
+        "name": "Chris Weil"
+      },
+      {
+        "@type": "Person",
+        "name": "Sara Ferro"
+      }
+    ]
+  },
+
+{
+    "@context": "https://schema.org",
+    "@type": "Movie",
+    "name": "Embassy of the Free Mind",
+    "datePublished": "2024",
+    "director": [
+      {
+        "@type": "Person",
+        "name": "Chris Weil"
+      },
+      {
+        "@type": "Person",
+        "name": "Sara Ferro"
+      }
+    ]
+  },
+
   {
     "@context": "https://schema.org",
     "@type": "Movie",
@@ -711,7 +747,7 @@
 
       <header class="uk-text-center uk-padding">
         <h1 class="uk-heading-xlarge uk-text-thin uk-animation-slide-top" style="color: white; text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);">Chris Weil</h1>
-        <h2 class="uk-heading-medium uk-text-thin uk-animation-slide-bottom uk-visible@m" style="color: white; text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);">Filmmaker & Artist</h2>
+        <h2 class="uk-heading-medium uk-text-thin uk-animation-slide-bottom" style="color: white; text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);">Filmmaker & Artist</h2>
       </header>
 
       <!-- Header Section End -->
@@ -1649,7 +1685,7 @@
 <span uk-lightbox><a href="./images/chris-weil.jpg"><img class="uk-align-center uk-align-left@m uk-margin-remove-adjacent uk-border-rounded" src="./images/chris-weil.webp" width="400" height="200" alt="Chris Weil"></a></span>
 <p>Chris Weil (*March 2, 1988, Bad Nauheim) is a German filmmaker and multimedia artist, who currently lives and works in Italy. After graduating as a Film & Video Editor in 2011 at the ARD.ZDF Media Academy in association with the Bayerischer Rundfunk and the IHK, Christian Tobias Weil starts video editing for the German public broadcasting stations (ARD and BR).</p>
   
-<p>In 2015, Chris Weil moves to Italy and, in collaboration with <span uk-lightbox><a href="https://ferrosara.github.io/" data-type="iframe">Sara Ferro</a></span>, founds the creative directors collective <span uk-lightbox><a href="https://artoldo.github.io/" data-type="iframe">ARTOLDO</a></span>. The collective produces a diverse range of works, including Arthouse movies, Feature Documentaries, Experimental Films, Moving Images Arts, Video Art, and Virtual Reality experiences. <br>Notable works are <span uk-lightbox><a href="https://artoldo.github.io/jung" data-type="iframe">C. G. Jung on Alchemy</a></span> (2023), <span uk-lightbox><a href="https://artoldo.github.io/ugodossi" data-type="iframe">Ugo Dossi</a></span> (2017), and <span uk-lightbox><a href="https://artoldo.github.io/ritmanlibrary" data-type="iframe">The Ritman Library</a></span> (2017), alongside interactive art installations such as <span uk-lightbox><a href="https://redmagicblue.github.io/achtung-banditen" data-type="iframe">Achtung Banditen</a></span> and <span uk-lightbox><a href="https://artoldo.github.io/kaltcaldo" data-type="iframe">kaltcaldo</a></span> or <span uk-lightbox><a href="https://artoldo.com/mcqueen" data-type="iframe">The Virtual Journey of the Mask</a></span> and <span uk-lightbox><a href="https://artoldo.github.io/zoroaster" data-type="iframe">Zoroaster Superstar</a></span>, which are showcased in solo and group <span uk-lightbox><a href="https://artoldo.github.io/exhibitions.html" data-type="iframe">exhibitions</a></span>.</p>
+<p>In 2015, Chris Weil moves to Italy and, in collaboration with <span uk-lightbox><a href="https://ferrosara.github.io/" data-type="iframe">Sara Ferro</a></span>, founds the creative directors collective <span uk-lightbox><a href="https://artoldo.github.io/" data-type="iframe">ARTOLDO</a></span>. The collective produces a diverse range of works, including Arthouse movies, Feature Documentaries, Experimental Films, Moving Images Arts, Video Art, and Virtual Reality experiences. <br>Notable works are <span uk-lightbox><a href="https://artoldo.github.io/secropolis" data-type="iframe">Secropolis</a></span> (2025), <span uk-lightbox><a href="https://artoldo.github.io/embassyofthefreemind" data-type="iframe">Embassy of the Free Mind</a></span> (2024), <span uk-lightbox><a href="https://artoldo.github.io/jung" data-type="iframe">C. G. Jung on Alchemy</a></span> (2023), <span uk-lightbox><a href="https://artoldo.github.io/ugodossi" data-type="iframe">Ugo Dossi</a></span> (2017), and <span uk-lightbox><a href="https://artoldo.github.io/ritmanlibrary" data-type="iframe">The Ritman Library</a></span> (2017), alongside interactive art installations such as <span uk-lightbox><a href="https://redmagicblue.github.io/achtung-banditen" data-type="iframe">Achtung Banditen</a></span> and <span uk-lightbox><a href="https://artoldo.github.io/kaltcaldo" data-type="iframe">kaltcaldo</a></span> or <span uk-lightbox><a href="https://artoldo.com/mcqueen" data-type="iframe">The Virtual Journey of the Mask</a></span> and <span uk-lightbox><a href="https://artoldo.github.io/zoroaster" data-type="iframe">Zoroaster Superstar</a></span>, which are showcased in solo and group <span uk-lightbox><a href="https://artoldo.github.io/exhibitions.html" data-type="iframe">exhibitions</a></span>.</p>
 
 </div>
 
@@ -1665,32 +1701,102 @@
 <!-- Filmography -->
 
             <div class="uk-accordion-content uk-text-large uk-text-lighter">
-<p>
-        <b>2023:</b> C. G. Jung on Alchemy
-    </p>
-    <p>
-        <b>2022:</b> Black Sudo Rising, Prampolini-Menarini Express, 
-        The Luther Blissett Legacy, Dio No No War
-    </p>
-    <p>
-        <b>2021:</b> Plant X, VE®NICE69, Play Rec: For Film, Night Terror, 
-        Hauntology of the Retrodromomania, PegaSOMOSh, Frammenti di una Festa Furiosa, 
-        Taxidrome, Glitching Offshore
-    </p>
-    <p>
-        <b>2020:</b> Mascara Cartridge Déjà War, Butterfly 360°, Synecdoche Turin, 
-        H(o)me(o)pa®t(h)y, Queen of the Luna Parking, AT MOre SPHERES, 
-        Temporally, Speed, Vespertilio Spillover, Timor Panicus
-    </p>
-    <p>
-        <b>2019:</b> MicroGnosing, Super Vario Birds, WhimSeaCall - Nocturnal Sea
-    </p>
-    <p>
-        <b>2018:</b> CarOuzel, Super Sauber, Paleo Impulse
-    </p>
-    <p>
-        <b>2017:</b> Ugo Dossi - Art and Space, The Ritman Library: Amsterdam
-    </p>
+
+
+    <ul class="uk-list uk-list-divider uk-list-large">
+
+        <li>
+            <h4 class="uk-heading-line"><span>2025</span></h4>
+            <ul class="uk-list uk-list-bullet">
+                <li>Secropolis</li>
+            </ul>
+        </li>
+
+        <li>
+            <h4 class="uk-heading-line"><span>2024</span></h4>
+            <ul class="uk-list uk-list-bullet">
+                <li>Embassy of the Free Mind</li>
+            </ul>
+        </li>
+        
+        <li>
+            <h4 class="uk-heading-line"><span>2023</span></h4>
+            <ul class="uk-list uk-list-bullet">
+                <li>C. G. Jung on Alchemy</li>
+            </ul>
+        </li>
+
+        <li>
+            <h4 class="uk-heading-line"><span>2022</span></h4>
+            <ul class="uk-list uk-list-bullet">
+                <li>Black Sudo Rising</li>
+                <li>Prampolini-Menarini Express</li>
+                <li>The Luther Blissett Legacy</li>
+                <li>Dio No No War</li>
+            </ul>
+        </li>
+
+        <li>
+            <h4 class="uk-heading-line"><span>2021</span></h4>
+            <ul class="uk-list uk-list-bullet">
+                <li>Plant X</li>
+                <li>VE®NICE69</li>
+                <li>Play Rec: For Film</li>
+                <li>Night Terror</li>
+                <li>Hauntology of the Retrodromomania</li>
+                <li>PegaSOMOSh</li>
+                <li>Frammenti di una Festa Furiosa</li>
+                <li>Taxidrome</li>
+                <li>Glitching Offshore</li>
+            </ul>
+        </li>
+
+        <li>
+            <h4 class="uk-heading-line"><span>2020</span></h4>
+            <ul class="uk-list uk-list-bullet">
+                <li>Mascara Cartridge Déjà War</li>
+                <li>Butterfly 360°</li>
+                <li>Synecdoche Turin</li>
+                <li>H(o)me(o)pa®t(h)y</li>
+                <li>Queen of the Luna Parking</li>
+                <li>AT MOre SPHERES</li>
+                <li>Temporally, Speed</li>
+                <li>Vespertilio Spillover</li>
+                <li>Timor Panicus</li>
+            </ul>
+        </li>
+
+        <li>
+            <h4 class="uk-heading-line"><span>2019</span></h4>
+            <ul class="uk-list uk-list-bullet">
+                <li>MicroGnosing</li>
+                <li>Super Vario Birds</li>
+                <li>WhimSeaCall - Nocturnal Sea</li>
+            </ul>
+        </li>
+
+        <li>
+            <h4 class="uk-heading-line"><span>2018</span></h4>
+            <ul class="uk-list uk-list-bullet">
+                <li>CarOuzel</li>
+                <li>Super Sauber</li>
+                <li>Paleo Impulse</li>
+            </ul>
+        </li>
+
+        <li>
+            <h4 class="uk-heading-line"><span>2017</span></h4>
+            <ul class="uk-list uk-list-bullet">
+                <li>Ugo Dossi - Art and Space</li>
+                <li>The Ritman Library: Amsterdam</li>
+            </ul>
+        </li>
+
+        <br><br>
+
+    </ul>
+
+
             </div>
 
 <!-- Filmography End -->
@@ -1705,7 +1811,7 @@
 <!-- Sticky Call to Action Button -->
 
       <div class="cta-button">
-        <a href="mailto:hello@chrisweil.com" class="uk-button uk-button-primary uk-button-large uk-border-rounded uk-box-shadow-medium uk-animation-scale-up">Get in Touch</a>
+        <a href="mailto:hello@chrisweil.com" class="uk-button uk-button-primary uk-button-large uk-border-rounded uk-box-shadow-medium uk-animation-scale-up"><span uk-icon="icon: chevron-double-right; ratio: 2.5"></span></a>
       </div>
     </div>
 
