--- a/index.html
+++ b/index.html
@@ -1760,7 +1760,8 @@
                 <li>H(o)me(o)pa®t(h)y</li>
                 <li>Queen of the Luna Parking</li>
                 <li>AT MOre SPHERES</li>
-                <li>Temporally, Speed</li>
+                <li>Temporally</li>
+                <li>Speed</li>
                 <li>Vespertilio Spillover</li>
                 <li>Timor Panicus</li>
             </ul>
